# PathwAI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: bootstrap-wiki.yml  ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md
docs/wiki/: Architecture.md  Configuration.md  Development.md  Evaluation.md  Home.md
evals/: RESULTS.md  gate.py  harness.py  metrics.py
examples/: run_planner.py
pathwai/: __init__.py  cli.py  config.py  pipeline.py  search.py  types.py  verify.py
pathwai/domains/: __init__.py  base.py  blocksworld.py  delivery.py  gridworld.py
pathwai/planners/: __init__.py  base.py  classical.py  llm.py  llm_search.py
pathwai/proposers/: __init__.py  base.py  ollama.py  openai_proposer.py  random_proposer.py  stub.py
tests/: test_domains.py  test_planners.py  test_proposers.py  test_search.py  test_verify_and_cli.py
